--- a/vegefoods-master/index.html
+++ b/vegefoods-master/index.html
@@ -69,16 +69,16 @@
 			</button>
 
 			<div class="collapse navbar-collapse" id="ftco-nav">
-				<ul class="navbar-nav ml-auto">
+				<ul class="navbar-nav navlink-animate ml-auto">
 					<li class="nav-item active"><a href="index.html" class="nav-link">About us</a></li>
 					</li>
-					<li class="nav-item"><a href="#" class="nav-link">Food park</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Products</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Why us</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Impact</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Media</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Career</a></li>
-					<li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Food park</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Products</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Why us</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Impact</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Media</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Career</a></li>
+					<li class="nav-item "><a href="#" class="nav-link">Contact</a></li>
 
 					<!-- <li class="nav-item cta cta-colored"><a href="cart.html" class="nav-link"><span class="icon-shopping_cart"></span>[0]</a></li> -->
 
