--- a/vegefoods-master/index.html
+++ b/vegefoods-master/index.html
@@ -395,104 +395,65 @@
 		</div>
 	</section>
 
-	<section class="ftco-section testimony-section">
-		<div class="container">
-			<div class="row justify-content-center mb-5 pb-3">
-				<div class="col-md-7 heading-section ftco-animate text-center">
-					<span class="subheading">Testimony</span>
-					<h2 class="mb-4">Our satisfied customer says</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there
-						live the blind texts. Separated they live in</p>
-				</div>
-			</div>
-			<div class="row ftco-animate">
-				<div class="col-md-12">
-					<div class="carousel-testimony owl-carousel">
-						<div class="item">
-							<div class="testimony-wrap p-4 pb-5">
-								<div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="icon-quote-left"></i>
-									</span>
-								</div>
-								<div class="text text-center">
-									<p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the
-										countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p class="name">Garreth Smith</p>
-									<span class="position">Marketing Manager</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap p-4 pb-5">
-								<div class="user-img mb-5" style="background-image: url(images/person_2.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="icon-quote-left"></i>
-									</span>
-								</div>
-								<div class="text text-center">
-									<p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the
-										countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p class="name">Garreth Smith</p>
-									<span class="position">Interface Designer</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap p-4 pb-5">
-								<div class="user-img mb-5" style="background-image: url(images/person_3.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="icon-quote-left"></i>
-									</span>
-								</div>
-								<div class="text text-center">
-									<p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the
-										countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p class="name">Garreth Smith</p>
-									<span class="position">UI Designer</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap p-4 pb-5">
-								<div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="icon-quote-left"></i>
-									</span>
-								</div>
-								<div class="text text-center">
-									<p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the
-										countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p class="name">Garreth Smith</p>
-									<span class="position">Web Developer</span>
-								</div>
-							</div>
-						</div>
-						<div class="item">
-							<div class="testimony-wrap p-4 pb-5">
-								<div class="user-img mb-5" style="background-image: url(images/person_1.jpg)">
-									<span class="quote d-flex align-items-center justify-content-center">
-										<i class="icon-quote-left"></i>
-									</span>
-								</div>
-								<div class="text text-center">
-									<p class="mb-5 pl-4 line">Far far away, behind the word mountains, far from the
-										countries Vokalia and Consonantia, there live the blind texts.</p>
-									<p class="name">Garreth Smith</p>
-									<span class="position">System Analyst</span>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
+	<section class="certificationSection">
+		<div class="left-content">
+		  <h1>Certifications</h1>
+		  <p>Explore our certifications to learn more about our quality standards.</p>
+		  <button id="explore-btn">Explore</button>
 		</div>
-	</section>
+		<div class="right-content">
+		  <div class="certification-grid">
+			<img src="images/certification/certification1.png" alt="Certification 1">
+			<img src="images/certification/certification2.png" alt="Certification 2">
+			<img src="images/certification/certification3.png" alt="Certification 3">
+			<img src="images/certification/certification4.png" alt="Certification 4">
+			<img src="images/certification/certification5.png" alt="Certification 5">
+			<img src="images/certification/certification6.png" alt="Certification 6">
+		  </div>
+		</div>
+	  </section>
+	  
 
+	<section class="qualitysection001">
+		<div class="left-content">
+		  <h2 class="heading">Quality is Our Legacy</h2>
+		  <div class="logos">
+			<img src="images/quality-section/logox.png" alt="Logo 1">
+			<img src="images/quality-section/logoy.png" alt="Logo 2">
+		  </div>
+		</div>
+		<div class="right-content">
+		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+		  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+		  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+		  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+		  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
+		  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
+		  <button id="know-more-btn">Know More</button>
+		</div>
+	  </section>
+	
+	  <section class="qualitysection002">
+		<div class="container">
+		  <h2 class="tittle">Quality is Our Legacy</h2>
+		  <p class="content">Sri Varsha is backed by FDA registration and certified under ISO 9001:2008, FSSC:22000, HACCP,</p>
+		  <p class="content">SGF, Halal and Kosher Standards. We leverage the latest extraction machinery and advanced</p>
+		  <p class="content">Quality Management Systems. </p>
+		  <div class="logos">
+			<img src="images/quality-section/logo1.png" alt="Logo 1">
+			<img src="images/quality-section/logo2.png" alt="Logo 2">
+			<img src="images/quality-section/logo3.png" alt="Logo 3">
+			<img src="images/quality-section/logo4.png" alt="Logo 4">
+			<img src="images/quality-section/logo5.png" alt="Logo 5">
+			<img src="images/quality-section/logo6.png" alt="Logo 6">
+		  </div>
+		  <button id="view-all-btn">View All Certifications</button>
+		</div>
+	  </section>
+	
 	<hr>
 
-	<section class="ftco-section ftco-partner">
-	</section>
 
 	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
 		<div class="contact-in container py-4">
