--- a/vegefoods-master/index.html
+++ b/vegefoods-master/index.html
@@ -5,7 +5,9 @@
 	<title>Vegefoods - Free Bootstrap 4 Template by Colorlib</title>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Viga&display=swap" rel="stylesheet">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Madimi+One&display=swap" rel="stylesheet">
@@ -95,10 +97,10 @@
 				<div class="container">
 					<div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
 
-						<div class="col-md-12 ftco-animate text-center madimi-one-regular" style=" font-family: Madimi One, sans-serif;
+						<div class="col-md-12 ftco-animate text-center madimi-one-regular" style=" font-family: 'Viga', sans-serif;
 						font-weight: 400;
 						font-style: normal;">
-							<h1 class="mb-2">Unlocking Naure's Goodness</h1>
+							<h1 class="mb-2">Unlocking Nature's Goodness</h1>
 							<h2 class="subheading mb-4">With a wide range of fresh pulps and frozen products</h2>
 							<!-- <p><a href="#" class="btn btn-primary">With a wide range of fresh pulps and frozen products</a></p> -->
 						</div>
@@ -110,264 +112,33 @@
 	</section>
 
 
-	<section class="ftco-section">
+	<section class="ftco-section" style="background:url('./images/greenbg.jpg') no-repeat center center/cover">
 		<div class="container">
-			<div class="row justify-content-center mb-3 pb-3">
-				<div class="col-md-12 heading-section text-center ftco-animate">
-					<span class="subheading">Featured Products</span>
-					<h2 class="mb-4">Our Products</h2>
-					<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia</p>
+			<div class="row justify-content-center mb-3 pb-3 text-white">
+				<div class="col-md-12 heading-section  ftco-animate">
+					<h2 class="mb-4 text-white" style="font-family: 'Viga', sans-serif;
+					font-weight: 400;
+					font-style: normal;
+				  ">Our Products</h2>
+					<p>Our Products A unique blend of traditional farming practices and modern techniques come together
+					</p>
+					<p>to create a selection of fresh flavors and healthy products for you. Our Pulp and Frozen Produce
+					</p>
+					<p>are manufactured using as specific practices and </p>
+					<p>is rich not just in flavor but in,nutrition profile as well</p>
 				</div>
 			</div>
-		</div>
-		<div class="container">
-			<div class="row">
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-1.jpg"
-								alt="Colorlib Template">
-							<span class="status">30%</span>
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Bell Pepper</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span class="mr-2 price-dc">₹120.00</span><span
-											class="price-sale">₹80.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-2.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Strawberry</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-3.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Green Beans</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-4.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Purple Cabbage</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-
-
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-5.jpg"
-								alt="Colorlib Template">
-							<span class="status">30%</span>
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Tomatoe</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span class="mr-2 price-dc">₹120.00</span><span
-											class="price-sale">₹80.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-6.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Brocolli</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-7.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Carrots</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="col-md-6 col-lg-3 ftco-animate">
-					<div class="product">
-						<a href="#" class="img-prod"><img class="img-fluid" src="images/product-8.jpg"
-								alt="Colorlib Template">
-							<div class="overlay"></div>
-						</a>
-						<div class="text py-3 pb-4 px-3 text-center">
-							<h3><a href="#">Fruit Juice</a></h3>
-							<div class="d-flex">
-								<div class="pricing">
-									<p class="price"><span>₹120.00</span></p>
-								</div>
-							</div>
-							<div class="bottom-area d-flex px-3">
-								<div class="m-auto d-flex">
-									<a href="#"
-										class="add-to-cart d-flex justify-content-center align-items-center text-center">
-										<span><i class="ion-ios-menu"></i></span>
-									</a>
-									<a href="#" class="buy-now d-flex justify-content-center align-items-center mx-1">
-										<span><i class="ion-ios-cart"></i></span>
-									</a>
-									<a href="#" class="heart d-flex justify-content-center align-items-center ">
-										<span><i class="ion-ios-heart"></i></span>
-									</a>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+			<div class="our-products-buttons">
+				<button type="button" class="btn btn-outline-light btn-width btn-rounded" data-mdb-ripple-init
+					data-mdb-ripple-color="green">Pulps</button>
+				<button type="button" class="btn btn-outline-light btn-width btn-rounded" data-mdb-ripple-init
+					data-mdb-ripple-color="green">Concentrate</button>
+				<button type="button" class="btn btn-outline-light btn-width btn-rounded" data-mdb-ripple-init
+					data-mdb-ripple-color="green">IQF Vegetables</button>
+				<button type="button" class="btn btn-outline-light btn-width btn-rounded" data-mdb-ripple-init
+					data-mdb-ripple-color="green">IQF Fruits</button>
+				<button type="button" class="btn btn-outline-light btn-width btn-rounded" data-mdb-ripple-init
+					data-mdb-ripple-color="green">Frozen Pulps</button>
 			</div>
 		</div>
 	</section>
@@ -375,6 +146,10 @@
 
 
 
+
+
+
+	<!-- 
 	<section class="ftco-section img" style="background-image: url(images/bg_3.jpg);">
 		<div class="container">
 			<div class="row justify-content-end">
@@ -393,69 +168,83 @@
 				</div>
 			</div>
 		</div>
-	</section>
+	</section> -->
 
 	<section class="certificationSection">
 		<div class="left-content">
-		  <h1>Certifications</h1>
-		  <p>Explore our certifications to learn more about our quality standards.</p>
-		  <button id="explore-btn">Explore</button>
+			<h1 style="font-family: 'Viga', sans-serif;
+			font-weight: 400;
+			font-style: normal;
+		  ">Trusted by</h1>
+			<p>Trusted by carrying a legacy of trust, our clients rely on us for</p>
+			<p>the finest, purest fruit pulse and concentrates, which are</p>
+			<p>crafted with care and consciousness.</p>
+			<button id="explore-btn">Explore</button>
 		</div>
 		<div class="right-content">
-		  <div class="certification-grid">
-			<img src="images/certification/certification1.png" alt="Certification 1">
-			<img src="images/certification/certification2.png" alt="Certification 2">
-			<img src="images/certification/certification3.png" alt="Certification 3">
-			<img src="images/certification/certification4.png" alt="Certification 4">
-			<img src="images/certification/certification5.png" alt="Certification 5">
-			<img src="images/certification/certification6.png" alt="Certification 6">
-		  </div>
+			<div class="certification-grid">
+				<img src="images/certification/delmonte.png" alt="Certification 1">
+				<img src="images/certification/nestle.png" alt="Certification 2">
+				<img src="images/certification/pepsico.png" alt="Certification 3">
+				<img src="images/certification/unliver.png" alt="Certification 4">
+				<img src="images/dohler.png" alt="Certification 5">
+				<img src="images/KDD-Logo.png" alt="Certification 6">
+			</div>
 		</div>
-	  </section>
-	  
+	</section>
+
 
 	<section class="qualitysection001">
 		<div class="left-content">
-		  <h2 class="heading">Quality is Our Legacy</h2>
-		  <div class="logos">
-			<img src="images/quality-section/logox.png" alt="Logo 1">
-			<img src="images/quality-section/logoy.png" alt="Logo 2">
-		  </div>
+			<h2 class="heading"style="font-family: 'Viga', sans-serif;
+			font-weight: 400;
+			font-style: normal;
+		  ">Quality is Our Legacy</h2>
+			<p>Varsha foods, we are devoted to maintaining Good Agricultural</p>
+			<p>Practices (GAP). With steadfast dedication, our farms are </p>
+			<p>strategically positioned in the fertile regions of Chittoor and Kadapa</p>
+			<p>encompassing RLY, Kodur, Tirupati, and Puttur. </p>
+			<br>
+			<p>These renowned agricultural hubs boast rich soils and optimal </p>
+			<p>climatic conditions, creating an ideal cultivation environment.</p>
+			<div class="logos">
+				<button id="know-more-btn">Know More</button>
+				<img src="images/quality-section/logox.png" alt="Logo 1">
+				<img src="images/quality-section/logoy.png" alt="Logo 2">
+			</div>
 		</div>
 		<div class="right-content">
-		  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-		  <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		  <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
-		  <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		  <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
-		  <p>Eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo.</p>
-		  <p>Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt.</p>
-		  <button id="know-more-btn">Know More</button>
+			
 		</div>
-	  </section>
-	
-	  <section class="qualitysection002">
+
+	</section>
+
+	<section class="qualitysection002">
 		<div class="container">
-		  <h2 class="tittle">Quality is Our Legacy</h2>
-		  <p class="content">Sri Varsha is backed by FDA registration and certified under ISO 9001:2008, FSSC:22000, HACCP,</p>
-		  <p class="content">SGF, Halal and Kosher Standards. We leverage the latest extraction machinery and advanced</p>
-		  <p class="content">Quality Management Systems. </p>
-		  <div class="logos">
-			<img src="images/quality-section/logo1.png" alt="Logo 1">
-			<img src="images/quality-section/logo2.png" alt="Logo 2">
-			<img src="images/quality-section/logo3.png" alt="Logo 3">
-			<img src="images/quality-section/logo4.png" alt="Logo 4">
-			<img src="images/quality-section/logo5.png" alt="Logo 5">
-			<img src="images/quality-section/logo6.png" alt="Logo 6">
-		  </div>
-		  <button id="view-all-btn">View All Certifications</button>
+			<h2 class="tittle" style="font-family: 'Viga', sans-serif;
+			font-weight: 400;
+			font-style: normal;
+		  ">Our Certification</h2>
+			<p class="content">Sri Varsha is backed by FDA registration and certified under ISO 9001:2008, FSSC:22000,
+				HACCP,</p>
+			<p class="content">SGF, Halal and Kosher Standards. We leverage the latest extraction machinery and advanced
+			</p>
+			<p class="content">Quality Management Systems. </p>
+			<div class="logos">
+				<img src="images/quality-section/logo1.png" alt="Logo 1">
+				<img src="images/quality-section/logo2.png" alt="Logo 2">
+				<img src="images/quality-section/logo3.png" alt="Logo 3">
+				<img src="images/quality-section/logo4.png" alt="Logo 4">
+				<img src="images/quality-section/logo5.png" alt="Logo 5">
+				<img src="images/quality-section/logo6.png" alt="Logo 6">
+			</div>
+			<button id="view-all-btn">View All Certifications</button>
 		</div>
-	  </section>
-	
-	<hr>
+	</section>
 
 
-	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-light">
+
+	<section class="ftco-section ftco-no-pt ftco-no-pb py-5 bg-white">
 		<div class="contact-in container py-4">
 			<div class="contact-map">
 				<iframe
@@ -486,7 +275,7 @@
 			<div class="row mb-5">
 				<div class="col-md">
 					<div class="ftco-footer-widget mb-4">
-						<h2 class="ftco-heading-2">Vegefoods</h2>
+						<h2 class="ftco-heading-2">Varsha foods</h2>
 						<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia.</p>
 						<ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
 							<li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
